testsuite/tests/properties/invalid_bind/bad_return_type/test.lkt
from common import FooNode

class BazNode: FooNode {
    fun conv_prop(): Int = 12
}
